Core & Ram fixes